--- a/index.html
+++ b/index.html
@@ -1,19 +1,9 @@
 <html>
 <head>
 
-<link rel="styleasheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"/>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.3.1/leaflet.css"/>
+<link rel="stylesheet" href="./main.css"/>
 
-<style>
-body {
-  background: url('./eibtm17.jpg');
-  background-size: 100%;
-}
-
-#map {
-  height: 500px;
-  width: 80%;
-}
-</style>
 </head>
 
 <body>
